[package]
name = "pre_pass"
version = "0.2.0"
authors = ["Jonathan <jonathan.endres@uk-erlangen.de>"]
edition = "2018"

[lib]
name = "pre_pass"
crate-type = ["cdylib"]

[dependencies.num-complex]
version = "0.4.0"

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module", "num-complex", "abi3-py37"]
